# DFIC

./: .gitignore  pyproject.toml
dfic/: analysis_notebook.ipynb  best_results_nodes.tex  best_results_orchestrator.tex
dfic/cifar10/: model_selection_script.py
dfic/cifar10/federated/: model_logs.txt  nodes_logs.txt  orchestrator_logs.txt  simulation_script.py
dfic/cifar10/federated/dataset/: CIFAR10_10_dataset_blueprint.csv  generate_dataset.py
dfic/cifar10/model_selection/: convmixer_768_32.csv  final_test_results.csv  final_test_results.tex  mobilenetv3_small_050.csv  mobilenetv3_small_075.csv  mobilenetv3_small_100.csv  resnet18.csv  resnet26.csv  resnet34.csv  resnet50.csv
dfic/common_functions/: train_loop.py  utility.py
dfic/fmnist/: model_selection_script.py
dfic/fmnist/federated/: model_logs.txt  nodes_logs.txt  orchestrator_logs.txt  simulation_script.py
dfic/fmnist/model_selection/: convmixer_768_32.csv  final_test_results.csv  final_test_results.tex  mobilenetv3_small_050.csv  mobilenetv3_small_075.csv  mobilenetv3_small_100.csv  resnet18.csv  resnet26.csv  resnet34.csv  resnet50.csv
dfic/mnist/: model_selection.ipynb  model_selection_script.py
dfic/mnist/federated/: model_logs.txt  nodes_logs.txt  orchestrator_logs.txt  simulation_script.py
dfic/mnist/model_selection/: convmixer_768_32.csv  final_test_results.csv  final_test_results.tex  mobilenetv3_small_050.csv  mobilenetv3_small_075.csv  mobilenetv3_small_100.csv  number_of_par_table.tex  resnet18.csv  resnet26.csv  resnet34.csv  resnet50.csv
(+16 files in other folders)
