[tool.poetry]
name = "dfic"
version = "0.1.0"
description = ""
authors = ["MKZuziak <maciejzuziak101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.9,<4.0"
pandas = ">= 2.2.3"
fedjust = ">=0.1.2.5"
torch = ">= 2.2.0"
torchvision = ">= 0.1.5"
datasets = ">= 2.17.0"
numpy = "1.26.4"
scikit-learn = ">= 1.4"
timm = ">= 1.0.8"
fedata = ">= 0.3.7"
fedcl = ">= 0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
